--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,6 @@
-@import "./utils/base";
+@import "./utils/normalize";
+@import "./utils//base";
+
+@import "./components/header";
+@import "./components/logo";
+@import "./components/navigation";
