--- a/css/main.css
+++ b/css/main.css
@@ -254,8 +254,21 @@ a {
   color: #000000;
 }
 
-img {
+img,
+svg {
   display: block;
+}
+
+button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0;
+  padding: 0;
+  border: none;
 }
 
 .container {
@@ -263,6 +276,70 @@ img {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+}
+
+.button {
+  padding: 24px 50px;
+  font-family: TT Hoves;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 12px;
+  letter-spacing: 2.4px;
+  text-transform: uppercase;
+}
+
+.button::after {
+  content: "";
+  display: inline-block;
+  margin-left: 12px;
+  width: 24px;
+  height: 24px;
+  -webkit-mask: url(../../images/ArrowRight.svg) no-repeat 50% 50%;
+  mask: url(../../images/ArrowRight.svg) no-repeat 50% 50%;
+  -webkit-mask-size: cover;
+  mask-size: cover;
+}
+
+.button--light {
+  color: #333333;
+  background-color: #ffffff;
+}
+.button--light.button::after {
+  background-color: #333333;
+}
+
+.button--dark {
+  color: #ffffff;
+  background-color: #333333;
+}
+.button--dark.button::after {
+  background-color: #ffffff;
+}
+
+.button--light.button:hover {
+  color: #ffffff;
+  background-color: #333333;
+}
+.button--light.button:hover.button::after {
+  background-color: #ffffff;
+}
+
+.button--dark.button:hover {
+  color: #333333;
+  background-color: #ffffff;
+}
+.button--dark.button:hover.button::after {
+  background-color: #333333;
+}
+
+.title {
+  color: #bdbdbd;
+  font-family: TT Hoves;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 64px;
 }
 
 .header {
@@ -317,4 +394,326 @@ img {
   line-height: 12px;
   letter-spacing: 2.4px;
   text-transform: uppercase;
+}
+
+.hero__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 120px;
+}
+
+.hero__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.hero__content-box {
+  position: relative;
+  width: 770px;
+  height: 829px;
+}
+
+.hero__title {
+  margin-bottom: 90px;
+}
+
+.hero__titel--black {
+  color: #333333;
+  font-family: TT Hoves;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 64px;
+}
+
+.hero__button-box {
+  position: absolute;
+  bottom: 0;
+}
+
+.swiper__control {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 90px;
+}
+
+.swiper__button {
+  display: block;
+  padding: 14px;
+  border: 1px solid #f2f2f2;
+  background: #f9f9f9;
+}
+.swiper__button:first-child {
+  margin-right: 22px;
+}
+
+.swiper__counter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.swiper__value {
+  color: #bdbdbd;
+  font-family: TT Hoves;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.swiper__element {
+  width: 31px;
+  height: 31px;
+  margin: 0 15px;
+}
+
+.about__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  margin-bottom: 120px;
+}
+
+.about__background {
+  position: absolute;
+  width: 100%;
+  height: 435px;
+  padding: 30px 0;
+  background-color: #fbfbfb;
+  z-index: -1;
+}
+
+.about__info-box {
+  margin: 30px 70px 0 30px;
+}
+
+.about__image:first-child {
+  margin-bottom: 30px;
+}
+
+.about__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-top: 30px;
+  margin-left: 100px;
+  min-width: 570px;
+  max-height: 435px;
+}
+
+.about__item:nth-child(1) {
+  margin-bottom: 30px;
+  margin-right: 30px;
+}
+.about__item:nth-child(3) {
+  margin-top: 30px;
+}
+
+.about__title {
+  margin-bottom: 20px;
+}
+
+.about__text {
+  margin-bottom: 20px;
+  font-family: TT Hoves;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 25px;
+  color: #000000;
+}
+
+.tasks__container {
+  margin-bottom: 120px;
+}
+
+.tasks__title {
+  margin-bottom: 60px;
+}
+
+.tasks__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.tasks__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.tasks__number {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: -48px;
+  margin-bottom: -48px;
+  margin-right: 30px;
+  font-family: SF Pro Display;
+  font-size: 200px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  color: #f2f2f2;
+}
+
+.tasks__text {
+  width: 280px;
+  font-family: TT Hoves;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 36px;
+  color: #333333;
+}
+
+.tasks__text--large {
+  width: 420px;
+}
+
+.projects__container {
+  padding-bottom: 120px;
+}
+
+.projects__title {
+  margin-bottom: 60px;
+}
+
+.projects__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-bottom: 30px;
+}
+
+.projects__item {
+  margin-right: 30px;
+}
+.projects__item:nth-child(3n+2) {
+  margin-right: 0;
+}
+.projects__item:nth-child(-n+2) {
+  margin-bottom: 30px;
+}
+
+.projects__button {
+  margin-left: auto;
+}
+
+.communication__title {
+  margin-bottom: 22px;
+}
+
+.communication__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.communication__image {
+  width: 749px;
+  height: 372px;
+}
+
+.form {
+  margin-right: 30px;
+}
+
+.form__box {
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.form__box--textarea {
+  margin-bottom: 22px;
+}
+
+.form__input {
+  position: relative;
+  width: 100%;
+  padding: 14px 20px 14px 20px;
+  font-family: TT Hoves;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.56px;
+  color: #333333;
+  background-color: #f3f3f3;
+  border: none;
+  outline: none;
+}
+
+.form__input:focus + .form__label {
+  display: none;
+}
+
+.form__label {
+  position: absolute;
+  top: 14px;
+  left: 20px;
+  font-family: TT Hoves;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.56px;
+  color: #8d8d8d;
+}
+
+.form__required {
+  color: #c30000;
+}
+
+.form__textarea {
+  height: 146px;
+  width: 390px;
+  resize: none;
+}
+
+.form__notification {
+  display: block;
+  margin: 0 20px 22px auto;
+  width: 330px;
+  font-family: TT Hoves;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.42px;
+  color: #333333;
+}
+
+.hidden {
+  display: none;
 }/*# sourceMappingURL=main.css.map */
