--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,16 @@
 @import "./utils/normalize";
-@import "./utils//base";
+@import "./utils/base";
+
+@import "./components/button";
+@import "./components/title";
 
 @import "./components/header";
 @import "./components/logo";
 @import "./components/navigation";
+@import "./components/hero";
+@import "./components/swiper";
+@import "./components/about";
+@import "./components/tasks";
+@import "./components/projects";
+@import "./components/communication";
+@import "./components/form";
