--- a/sass/utils/_base.scss
+++ b/sass/utils/_base.scss
@@ -19,8 +19,17 @@ a {
   color: #000000;
 }
 
-img {
+img,
+svg {
   display: block;
+}
+
+button {
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  border: none;
 }
 
 .container {
