--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -18,8 +18,8 @@
 
   width: 24px;
   height: 24px;
-  -webkit-mask: url(images/ArrowRight.svg) no-repeat 50% 50%;
-  mask: url(images/ArrowRight.svg) no-repeat 50% 50%;
+  -webkit-mask: url(../images/ArrowRight.svg) no-repeat 50% 50%;
+  mask: url(../images/ArrowRight.svg) no-repeat 50% 50%;
   -webkit-mask-size: cover;
   mask-size: cover;
 }
