--- a/sass/components/_communication.scss
+++ b/sass/components/_communication.scss
@@ -1,8 +1,12 @@
+.communication__container {
+  padding-bottom: 120px;
+}
+
 .communication__title {
   margin-bottom: 22px;
 }
 
-.communication__container {
+.communication__box {
   display: flex;
 }
 
