--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,7 +1,5 @@
 .hero__container {
   display: flex;
-
-  margin-bottom: 120px;
 }
 
 .hero__box {
@@ -21,7 +19,7 @@
   margin-bottom: 90px;
 }
 
-.hero__titel--black {
+.hero__title--black {
   color: #333333;
   font-family: TT Hoves;
   font-size: 64px;
