--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,3 +14,7 @@
 @import "./components/projects";
 @import "./components/communication";
 @import "./components/form";
+@import "./components/footer";
+@import "./components/information";
+@import "./components/address";
+@import "./components/social";
