--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -8,6 +8,8 @@
   line-height: 12px;
   letter-spacing: 2.4px;
   text-transform: uppercase;
+
+  transition: background-color 250ms linear, color 250ms linear;
 }
 
 .button::after {
@@ -22,6 +24,8 @@
   mask: url(../images/ArrowRight.svg) no-repeat 50% 50%;
   -webkit-mask-size: cover;
   mask-size: cover;
+
+  transition: background-color 250ms linear;
 }
 
 .button--light {
@@ -44,6 +48,12 @@
   }
 }
 
+.button--link {
+  display: inline-flex;
+  align-items: center;
+  cursor: pointer;
+}
+
 .button--light.button:hover {
   color: #ffffff;
   background-color: #333333;
@@ -54,7 +64,7 @@
 
 .button--dark.button:hover {
   color: #333333;
-  background-color: #ffffff;
+  background-color: #f2f2f2;
   &.button::after {
     background-color: #333333;
   }
