--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -1,7 +1,3 @@
-.projects__container {
-  padding-bottom: 120px;
-}
-
 .projects__title {
   margin-bottom: 60px;
 }
@@ -14,7 +10,11 @@
 }
 
 .projects__item {
+  position: relative;
+
   margin-right: 30px;
+
+  overflow: hidden;
 
   &:nth-child(3n + 2) {
     margin-right: 0;
@@ -25,6 +25,56 @@
   }
 }
 
+.projects__overlay {
+  position: absolute;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: #333333;
+  opacity: 0.8;
+
+  transform: translateY(-100%);
+  transition: transform 250ms ease;
+}
+
+.projects__item:hover .projects__overlay {
+  transform: translateY(0);
+}
+
+.projects__overlay-box {
+  position: absolute;
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.projects__overlay-text {
+  display: flex;
+  margin-bottom: 12px;
+
+  font-family: TT Hoves;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 64px;
+
+  color: #ffffff;
+
+  text-transform: uppercase;
+}
+
+.project__overlay-text--small {
+  font-size: 42px;
+  line-height: 42px;
+}
+
+.projects__overlay-button {
+  padding: 2px 4px;
+}
+
 .projects__button {
-  margin-left: auto;
+  display: flex;
+  justify-content: flex-end;
 }
