--- a/sass/components/_swiper.scss
+++ b/sass/components/_swiper.scss
@@ -41,9 +41,6 @@
   height: 31px;
 
   margin: 0 25px;
-}
 
-.swiper__element-icon {
-  width: 31px;
-  height: 31px;
+  background-image: url("../images/Line.svg");
 }
