--- a/sass/components/_swiper.scss
+++ b/sass/components/_swiper.scss
@@ -42,5 +42,5 @@
 
   margin: 0 25px;
 
-  background-image: url("../images/LineOpt.svg");
+  background-image: url("../images/DiagonalLine.svg");
 }
