--- a/css/main.css
+++ b/css/main.css
@@ -509,7 +509,7 @@ button {
   width: 31px;
   height: 31px;
   margin: 0 25px;
-  background-image: url("../images/LineOpt.svg");
+  background-image: url("../images/DiagonalLine.svg");
 }
 
 .about__container {
